# moby-bazel-go-example

./: BUILD.bazel  README.md  WORKSPACE  main.go
